<resources>
    <string name="app_name">GuessTheCountry</string>
    <string name="quiz_app">Guess The Country</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="submit">submit</string>
    <string name="what_country_does_this_flag_belong_to">What is this country?</string>
    <string name="_0_100">0 / 100</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>