<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:alpha="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">


            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:textSize="35sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/please_enter_your_name"
                android:textSize="25sp"
                android:textStyle="normal"
                android:layout_marginTop="15dp"
                android:padding="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:textColorHint="@color/black"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/submit"
                android:text="@string/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/material_dynamic_neutral_variant0"
                android:textColor="@color/white"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
