<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:contentDescription="@string/app_name"
    android:fillViewport="true"
    tools:context=".Quiz">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/what_country_does_this_flag_belong_to"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <ImageView
            android:id="@+id/flag"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:alpha="0.75"

            android:background="@drawable/indonesia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintVertical_bias="0.304" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginTop="39dp"
            android:layout_marginBottom="67dp"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toTopOf="@+id/flag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question">


        </ProgressBar>

        <TextView
            android:id="@+id/progressBarIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flag"
            app:layout_constraintVertical_bias="0.5"

            >


            <Button
                android:id="@+id/optionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="@color/white"
                android:onClick="clickCountryButton"
                android:text="Button"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/optionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="@color/white"
                android:onClick="clickCountryButton"
                android:text="Button"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/optionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="@color/white"
                android:onClick="clickCountryButton"
                android:text="Button"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/optionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="@color/white"
                android:onClick="clickCountryButton"
                android:text="Button"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/optionFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:background="@color/white"
                android:onClick="clickCountryButton"
                android:text="Button"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_0_100"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/progressBarIndicator"
            app:layout_constraintTop_toBottomOf="@+id/question" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
